challenge/scenarios/06-security/networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-client-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-client
spec:
  hosts:
  -  "*"
  gateways:
  - todo-client-gateway
  http:
  - route:
    - destination:
        host: todo-client
        port:
          number: 8082
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  hosts:
  - todo-repo
  http:
  - route:
    - destination:
        host: todo-repo
        subset: all-ok
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo-client
  labels:
    app: todo-client
spec:
  host: todo-client
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: all-ok
    labels:
      version: all-ok

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  host: todo-repo
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: all-ok
    labels:
      version: all-ok
  - name: http-errors
    labels:
      version: http-errors
  - name: delay
    labels:
      version: delay
